k8-deployment/manifests/odoo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: odoo
  name: odoo
  namespace: dod14
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - image: docker.io/ibees/dod14:14.0-prod
          name: web
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8069
          resources:
            limits:
              memory: 2048Mi
              cpu: 500m
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          #   initialDelaySeconds: 300
          #   periodSeconds: 30
          #   timeoutSeconds: 5
          #   successThreshold: 1
          #   failureThreshold: 6
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   successThreshold: 1
          #   failureThreshold: 6
          volumeMounts:
            - mountPath: /var/lib/odoo
              name: odoo-data
      restartPolicy: Always
      # nodeSelector:
      #   node_name: node-A
      volumes:
        - name: odoo-data
          persistentVolumeClaim:
            claimName: odoo-data-claim
