k8-deployment/manifests/odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: odoo
  name: odoo
  namespace: odoo14
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8069
  selector:
    app: odoo
